[package]
name = "sokoban"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano         = "0.33"
vulkano-win     = "0.33"
vulkano-shaders = "0.33"
vulkano-util    = "0.33"
winit           = "0.28"

cgmath          = "0.18"
image           = "0.24.6"
anyhow          = "1.0.71"
gltf            = "1.2.0"
dataurl         = "0.1.2"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 3
